# wechat-agent-rs

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  justfile  release-plz.toml  rustfmt.toml
.github/workflows/: ci.yml  cleanup-branches.yml  lint.yml  release-plz.yml  release-pr.yml  rust.yml
docs/guides/: anti-patterns.md  code-comments.md  commit-style.md  rust-style.md  workflow.md
docs/plans/: 2026-03-22-weixin-agent-sdk-rust-port.md
examples/: echo_bot.rs  openai_bot.rs
scripts/: check-conventional-commit.sh
src/: api.rs  bot.rs  errors.rs  lib.rs  media.rs  models.rs  runtime.rs  storage.rs
